@@ -1698,7 +1698,7 @@ void Game_window::stop_actor
 	else
 		{
 		main_actor->stop();	// Stop and set resting state.
-		paint();	// ++++++Necessary?
+//		paint();	// ++++++Necessary?
 		if (!gump_man->gump_mode() || gump_man->gumps_dont_pause_game())
 			main_actor->get_followers();
 		}
